[gd_scene load_steps=5 format=2]

[ext_resource path="res://HUD/LevelUI.tscn" type="PackedScene" id=1]
[ext_resource path="res://HUD/ScoreUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://HUD/HealthUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://HUD/HUD.gd" type="Script" id=4]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 15.0
margin_top = 15.0
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthUI" parent="HBoxContainer" instance=ExtResource( 3 )]
scale = Vector2( 2, 2 )

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 590.0
margin_bottom = 28.0
custom_constants/separation = 590

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 594.0
margin_right = 597.0
margin_bottom = 28.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelUI" parent="HBoxContainer/VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 3.0

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 4.0
margin_right = 3.0
margin_bottom = 24.0
custom_constants/separation = 20

[node name="ScoreUI" parent="HBoxContainer/VBoxContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 28.0
margin_right = 3.0
margin_bottom = 28.0
